<resources>
    <string name="app_name">诵习练学生</string>
    <string name="bottom_main">首页</string>
    <string name="bottom_lesson">微课</string>
    <string name="bottom_note">错题本</string>
    <string name="bottom_me">我的</string>
    <string name="sjd">诵经典</string>
    <string name="xhz">习汉字</string>
    <string name="lys">练运算</string>
    <!--诵经典选题-->
    <string name="jwth">精卫填海（填空）</string>
    <string name="sckl">诗词酷连（连线）</string>
    <string name="ggxs">宫格寻诗（拼诗）</string>
    <string name="sqxm">搜奇选妙（选择）</string>
    <string name="mbsf">明辨是非（判断）</string>
    <string name="ryss">日有所诵（诵读）</string>
    <string name="syzy">诵以致用（视频）</string>

    <string name="jwth00">精卫填海</string>
    <string name="sckl00">诗词酷连</string>
    <string name="ggxs00">宫格寻诗</string>
    <string name="sqxm00">搜奇选妙</string>
    <string name="mbsf00">明辨是非</string>
    <string name="ryss00">日有所诵</string>
    <string name="syzy00">诵以致用</string>

    <string name="homework_toast">温馨提示：亲爱的同学们，做题要认真仔细，注意时间。本次作业请在5分钟内完成。</string>
    <!--练运算选题-->
    <string name="one">一、直接计算</string>
    <string name="two">二、竖式计算</string>
    <string name="three">三、计算</string>
    <string name="four">四、填空</string>
    <string name="five">五、在方框中填上合适的数</string>
    <string name="six">六、计算</string>
    <string name="seven">七、在O里填上 ">"、"&lt;" 或 "="</string>
    <string name="eight">八、想一想，填一填</string>
    <string name="nine">九、选一选</string>

    <!--<string name="lys_tk">填空</string>
    <string name="lys_lx">连线</string>
    <string name="lys_pd">判断</string>
    <string name="lys_xz">选择</string>
    <string name="lys_js">计算题</string>
    <string name="lys_yy">应用题</string>
    <string name="lys_ht">画图题</string>-->

    <string name="lys_ks">口算题</string>
    <string name="lys_js">计算题</string>
    <string name="lys_tk">填空题</string>
    <string name="lys_xz">选择题</string>

    <!--习汉字选题-->
    <string name="xhz_tk">填空</string>
    <string name="xhz_lm">临摹</string>

    <!--回退键-->
    <string name="go_back">返回</string>
    <!--个人奖励-->
    <string name="personal_reward">个人奖励</string>
    <string name="my_medal">我的勋章</string>
    <string name="today_rank">今日排名</string>
    <string name="no_rank">未上榜</string>
    <string name="total_praise">获赞总数</string>
    <string name="who_give_praise">谁给我点赞 ></string>
    <!--个人等级-->
    <string name="personal_level">个人等级</string>
    <string name="synthesize_grade">诵习练综合成绩</string>
    <string name="synthesize_attainment">个人综合素养雷达图</string>

    <!--首页-->
    <string name="wycg">我要闯关</string>
    <string name="cjbg">成绩报告</string>
    <string name="xxgj">学习工具</string>
    <!--统计报告-->
    <string name="statistics_report">统计报告</string>
    <string name="tj_homework">作业统计情况</string>
    <string name="tj_mistake">错题统计</string>
    <string name="full_score">满分</string>
    <string name="high_score">最高分</string>
    <string name="low_score">最低分</string>
    <string name="average_score">平均分</string>
    <!--学习工具-->
    <string name="gxjc">国学精粹</string>
    <string name="zwfd">作文辅导</string>
    <string name="kply">科普乐园</string>
    <string name="cgkd">常规考点</string>
    <string name="jdhb">经典绘本</string>
    <string name="hzbs">汉字笔顺</string>
    <!--微课-->
    <string name="weike">微课</string>
    <string name="kzkt">空中课堂</string>

    <!--网络请求相关-->
    <string name="network_request_fail">服务繁忙，请稍后再试 </string>
    <!--请输入搜索关键字-->
    <string name="key_word">请输入搜索关键字</string>
    <!--示例-->
    <string name="brief_introduction">教育部推荐中小学生必读传统文化精品读物！增强民族认同，修补文化断层，提高综合素质！传统文化业能鲜活、有趣！</string>

    <!--dialog-->
    <string name="content_topic">注意：退出当前界面将重新开始做题与计时，请确认后退出！</string>
    <string name="final_toast">注意：本次练习已完成，是否提交本次习题？</string>

    <!--个人中心-->
    <string name="feedback">用户反馈</string>
    <string name="contact">联系我们</string>
    <string name="join">加入我们</string>
    <string name="empty_content">内容不能为空！</string>
    <string name="clip_wx">客服微信号已复制，请打开微信并在搜索内粘贴即可添加客服</string>
    <string name="contact_phone">联系我们：\n027-85418630</string>
    <string name="join_us_1">&#160;&#160;&#160;&#160;&#160;&#160;诵习练APP由江汉区教育局出品，提供辅助学习的服务，立志让知识变得生动，将学习变得充满乐趣。</string>
    <string name="join_us_2">&#160;&#160;&#160;&#160;&#160;&#160;如果你和我们一样，是拥有思想的潮人的话，快来猛烈的骚扰我们吧！</string>
    <string name="clean_cache">是否确定清理app缓存？</string>
    <string name="quit_app">是否退出当前账号？</string>
    <string name="title_activity_change_net">Settings</string>
    <string name="net_download">使用2G/3G/4G网络下载</string>
    <string name="net_play">使用2G/3G/4G网络播放</string>
    <string name="download_on">2G/3G/4G下载会产生较多流量消耗\n建议在WIFI模式下下载</string>
    <string name="play_on">2G/3G/4G下载会产生较多流量消耗\n建议在WIFI模式下播放</string>

    <!--题目详情-->
    <string name="do_again">是否重做该题？</string>

    <!--诵读例子-->
    <string name="recite_content">五月的槐乡，连风儿打的漩涡都香气扑鼻，整个槐乡都浸在香海中。五月的槐乡，连风儿打的漩涡都香气扑鼻，整个槐乡都浸在香海中。五月的槐乡，连风儿打的漩涡都香气扑鼻，整个槐乡都浸在香海中。</string>
    <string name="fluency">流畅度</string>
    <string name="integrity">完整度</string>
    <string name="accuracy">准确度</string>
    <string name="standard">标准度</string>

    <!--通知-->
    <string name="notice_list">通知列表</string>
    <string name="notice_detail">通知详情</string>

    <!-- 权限设置 -->
    <string name="go_permission">相关权限未被授予，功能将无法使用，是否去设置该应用权限？</string>

    <!-- 新用户请完善学校信息 -->
    <string name="perfect_information">新用户请完善学校等相关信息</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
