<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/bottom_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/main_bottm_bg"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_main"
            style="@style/menuButton"
            android:drawableTop="@drawable/main"
            android:text="@string/bottom_main" />

        <RadioButton
            android:id="@+id/rb_lesson"
            style="@style/menuButton"
            android:drawableTop="@drawable/lesson"
            android:text="@string/bottom_lesson" />

        <RadioButton
            android:id="@+id/rb_note"
            style="@style/menuButton"
            android:drawableTop="@drawable/note"
            android:text="@string/bottom_note" />

        <RadioButton
            android:id="@+id/rb_me"
            style="@style/menuButton"
            android:drawableTop="@drawable/me"
            android:text="@string/bottom_me" />
    </RadioGroup>

</LinearLayout>