<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PersonalLevelActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/main_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10"
            android:text="@string/go_back"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/personal_level"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/dp2"
                android:layout_height="@dimen/dp30"
                android:layout_marginBottom="@dimen/dp5"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:layout_marginTop="@dimen/dp5"
                android:background="@color/main_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/synthesize_grade"
                android:textSize="@dimen/sp16" />

        </LinearLayout>

        <View style="@style/d_w" />

        <com.dofun.sxl.view.RadarView
            android:id="@+id/chart_grade"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:text="@string/personal_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View style="@style/d_w" />

    <View style="@style/separate_line" />

    <View style="@style/d_w" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/dp2"
                android:layout_height="@dimen/dp30"
                android:layout_marginBottom="@dimen/dp5"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:layout_marginTop="@dimen/dp5"
                android:background="@color/main_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/synthesize_attainment"
                android:textSize="@dimen/sp16" />

        </LinearLayout>

        <View style="@style/d_w" />

        <com.github.mikephil.charting.charts.RadarChart
            android:id="@+id/chart_attainment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View style="@style/d_w" />
</LinearLayout>